crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.6__exports__export_multi_path_conflict.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.ambiguous_import] 12:19..12:19: name `x` is ambiguous: imported from packages `P`, `Q`
---
unit (0 diagnostics)
