crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.6__exports__export_triggers_import.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.import_conflict] 8:8..8:8: import of `x` from package `p1` conflicts with local declaration
---
unit (0 diagnostics)
