crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.6__exports__export_triggers_import_dual_ns.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic.import_conflict] 8:8..8:8: import of `x` from package `p1` conflicts with local declaration
  error[lyra.semantic.import_conflict] 10:8..10:8: import of `x_t` from package `p1` conflicts with local declaration
---
unit (0 diagnostics)
